UI-Optimierungen: Prominente Plus-Schaltflächen und verbesserter Slider-Indikator

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       body {
         font-family: 'Inter', sans-serif;
       }
+      
+      /* Scrollbar verstecken für mobile Timeline */
+      .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+      .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+      }
     </style>
   <script type="importmap">
 {
